--- a/elements/crew-team-manager-schedule/crew-team-manager-schedule-list-results.html
+++ b/elements/crew-team-manager-schedule/crew-team-manager-schedule-list-results.html
@@ -6,7 +6,7 @@
 
 <link rel="import" href="../crew-team-manager-avatar/crew-team-manager-avatar.html">
 
-<dom-module id="crew-team-manager-roster-list-results">
+<dom-module id="crew-team-manager-schedule-list-results">
     <template>
         <style>
              :host {
@@ -24,41 +24,41 @@
                 right: 0px;*/
             }
 
-            .athlete {
+            .regatta {
                 background-color: white;
                 @apply(--layout-horizontal);
                 border-bottom: solid 1px grey;
             }
 
-            .athlete-avatar {
+            .regatta-avatar {
                 margin: 8px;
             }
 
-            .athlete-info {
+            .regatta-info {
                 font-size: 18px;
                 @apply(--layout-flex);
                 padding: 8px;
             }
 
-            .athlete-info-name {
+            .regatta-info-name {
                 @apply(--paper-font-title);
             }
 
-            .athlete-info-location {
+            .regatta-info-location {
                 @apply(--paper-font-caption);
             }
         </style>
 
         <iron-list id="list" items="[[data]]" as="item">
             <template>
-                <div class="athlete" on-click="_handleItemClick">
+                <div class="regatta" on-click="_handleItemClick">
 
-                    <crew-team-manager-avatar class="athlete-avatar" value="[[item.firstName]]"></crew-team-manager-avatar>
-                    <div class="athlete-info">
-                        <div class="athlete-info-name">
-                            [[item.firstName]] [[item.lastName]]
+                    <crew-team-manager-avatar class="regatta-avatar" value="[[item.name]]"></crew-team-manager-avatar>
+                    <div class="regatta-info">
+                        <div class="regatta-info-name">
+                            [[item.name]]
                         </div>
-                        <div class="athlete-info-location">
+                        <div class="regatta-info-location">
                             [[item.streetAddress]] [[item.city]] [[item.state]]
                         </div>
                     </div>
@@ -69,10 +69,10 @@
 
     <script>
         // Extend Polymer.Element with MyMixin
-        class crewTeamManagerRosterListResults extends Polymer.Element {
+        class crewTeamManagerScheduleListResults extends Polymer.Element {
 
             static get is() {
-                return 'crew-team-manager-roster-list-results'
+                return 'crew-team-manager-schedule-list-results'
             }
 
             static get properties() {
@@ -80,21 +80,25 @@
                     data: {
                         type: Object,
                     },
+
+                    _name: {
+                        type: String
+                    }
                 }
             }
 
             _handleItemClick(e) {
-                this.dispatchEvent(new CustomEvent(crewTeamManagerRosterListResults.is + '-action-detail', {
+                this.dispatchEvent(new CustomEvent(crewTeamManagerScheduleListResults.is + '-action-detail', {
                     bubbles: true,
                     composed: true,
                     detail: {
-                        athlete: e.model.item.$key
+                        regatta: e.model.item.$key
                     }
                 }));
             }
         }
 
         // Register custom element definition using standard platform API
-        customElements.define(crewTeamManagerRosterListResults.is, crewTeamManagerRosterListResults);
+        customElements.define(crewTeamManagerScheduleListResults.is, crewTeamManagerScheduleListResults);
     </script>
 </dom-module>
